syntax = "proto3";

package yandex.cloud.monitoring.v3;

import "google/protobuf/timestamp.proto";
import "yandex/cloud/monitoring/v3/notification_status.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/monitoring/v3;monitoring";
option java_package = "yandex.cloud.api.monitoring.v3";

message ChannelState {
    // Reference to folder that contains alert.
    string folder_id = 1;

    // Reference to notification channel.
    string channel_id = 2;

    // Latest notification status.
    NotificationStatus status = 3;

    // Time when notification was triggered latest time.
    google.protobuf.Timestamp latest_eval = 4;
}
